# domains

./: .gitattributes  Cargo.toml  README.md
src/: check_domain.rs  download_zones.rs  get_zones.rs  lib.rs  lookup_site.rs  main.rs  parsers.rs  resolve_domains.rs  tools.rs  update_zones.rs
zones/: .gitignore
