[package]
name = "zones"
version = "0.1.0"
authors = ["picania <mangustspam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
flate2 = { version = "1.0.17" }
trust-dns-resolver = "0.19.5"
scraper = "0.12.0"
mongodb = { version = "1.1.0", features = ["sync"], default-features = false }
bson = "1.1.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"
tokio = { version = "0.2.25", features = ["full"] } # compatible with mongodb
futures = "0.3.14"
#itertools = "0.10.0"
serde = "1.0.125"
#punycode = "0.4.1"

[[bin]]
name = "update_zones"
path = "src/update_zones.rs"

[[bin]]
name = "check_domain"
path = "src/resolve_domains.rs"

[[bin]]
name = "lookup_site"
path = "src/lookup_site.rs"

[[bin]]
name = "download_zones"
path = "src/download_zones.rs"
